@@ -1,4 +1,4 @@
 DIST anki-0.9.6.tgz 2200351 RMD160 f14a3309b794c1cefebaeaa0b7c4ad8acd08f0e6 SHA1 e3aa2123b075e48e8ebba1f27560b865553010fb SHA256 3a940ebc26818b58bd84fc2cacde24f4f05fcb94c305a7f7ac26a290022f2afd
 EBUILD anki-0.9.6.ebuild 1524 RMD160 f96714e0649d3cc899a3ce3b319bb451dd27f794 SHA1 8a175657eab98794d6b9c495246a391c5574e264 SHA256 c99f778099527c5ae9348f9f33b01ea81c4f61d00d4245c9cb82a2643be014ac
-MISC ChangeLog 664 RMD160 d37c7261a8725629afe754e798506d00424b2f82 SHA1 ccc7cc33dcc8b75b8b51c174f33ba9e308d6726d SHA256 9eac74151ba5df9846d56738f479f8d626000788b9a1a63739ac7806d5e879b8
-MISC metadata.xml 692 RMD160 05f7e0cfc117fe861fa5c9d936f7f34bc6fa45b1 SHA1 5afb493ac60ccfd69337ca3dc633d800a29e06cd SHA256 05c27eb1f771a78282724361bacd54dc6fcab56cc2eab9056a44ad6589168b5e
+MISC ChangeLog 757 RMD160 09a83fccb72b0971261cdc634de87dcf4152e280 SHA1 424ff78c59dffcd2acd2cd4db5223d15d92a353c SHA256 661a8d91d70f4215b60a3106481c238ab53f3b8c6e10a6c1cee1c6d1bf669c51
+MISC metadata.xml 601 RMD160 38dc1d6edb1eeb276bf604a3c93d989bc1d5b20a SHA1 1b5b7e515e4ba0dbf5ca7d5e12f357ac714b979e SHA256 4c2bdbeed65abfac1c2b71d399c59b7ea12c47bb2831c5a56e900da6d078aab5
