@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>hncaldwell@csupomona.edu</email>
-		<name>Heath Caldwell</name>
-	</maintainer>
-	<herd>no-herd</herd>
+	<herd>maintainer-wanted</herd>
 	<longdescription lang="en">
 		Anki is a program designed to help you remember facts
 		(such as words and phrases in a foreign language) as
